fsx bug on Safari hover "before"

--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -72,6 +72,7 @@
   transition: all 0.3s ease-in-out;
   overflow: hidden;
   position: relative;
+  transform: translateZ(0);
 
   &:before {
     content: '';
@@ -83,12 +84,16 @@
     background: $accent-color;
     border-radius: inherit;
     transition: all 0.5s ease;
-    transform: translateX(-100%);
+    transform: translateX(-100%) translateZ(0);
+
   }
 
   &:hover {
+    transform: translateZ(0);
+
     &:before {
-      transform: translateX(0%);
+      transform: translateX(0%) translateZ(0);
+      ;
     }
 
     p {
